# Momentum

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  justfile
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
deploy/config/: config.toml.example
deploy/scripts/: bootstrap.sh  health-check.sh  install.sh
deploy/systemd/: momentum.service
docs/: database-migrations.md  deploy.md  git-workflow.md  habits.md  momentum-framework.md  releases.md
docs/manual/: README.md  habit-examples.md
scripts/: download-static-assets.sh
src/: config.rs  main.rs  server.rs  static_files.rs
src/cli/: mod.rs
src/db/: mod.rs
src/templates/: mod.rs
