[package]
name = "momentum"
version = "0.0.1"
edition = "2024"

[dependencies]
# Web Framework & Async Runtime
actix-web = "4.10.2"
tokio = { version = "1.44.1", features = ["full"] }

# Database
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
    "migrate",
] }


# CLI
clap = { version = "4.5.34", features = ["derive"] }

# Templating & Frontend
maud = { version = "0.27.0", features = ["actix-web"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }

# Configuration
toml = "0.8.20"

# Static Assets
rust-embed = "8.0"
mime_guess = "2.0"

# Utilities
chrono = { version = "0.4.40", features = ["serde"] }
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
